force-app/main/default/objects/TCP_Product_Customer__c/TCP_Product_Customer__c.object-meta.xml
<CustomObject>
    <label>Product Customer</label>
    <nameField>
        <displayFormat>PC-{000000000}</displayFormat>
        <label>Product Customer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Customers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>