force-app/main/default/objects/TCP_Product_Customer__c/fields/Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number__c</fullName>
    <label>Customer Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>