force-app/main/default/objects/TCP_Product_Customer__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Customers</relationshipLabel>
    <relationshipName>Product_Customers</relationshipName>
    <type>Lookup</type>
</CustomField>