force-app/main/default/objects/TCP_Product_Customer__c/fields/TCP_STNSAP_CMIR_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>TCP_STNSAP_CMIR_ExternalId__c</fullName>
    <externalId>true</externalId>
    <label>STNSAP CMIR ExternalId</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>