force-app/main/default/objects/TCP_Product_Customer__c/fields/UOM__c.field-meta.xml
<CustomField>
    <fullName>UOM__c</fullName>
    <description>Base Unit of Measure</description>
    <label>Unit of Meausre</label>
    <length>3</length>
    <type>Text</type>
</CustomField>