force-app/main/default/objects/TCP_Product_Customer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>Account__c</columns>
    <columns>Partner_Function__c</columns>
    <columns>TCP_STNSAP_CMIR_ExternalId__c</columns>
    <columns>TCP_P94_CMIR_ExternalId__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Active__c</columns>
    <columns>Customer_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>