force-app/main/default/objects/TCP_Product_Customer__c/listViews/View_All.listView-meta.xml
<ListView>
    <fullName>View_All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Partner_Function__c</columns>
    <columns>Product__c</columns>
    <columns>Active__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>TCP_STNSAP_CMIR_ExternalId__c</columns>
    <filterScope>Everything</filterScope>
    <label>View All</label>
</ListView>